# ECO

./: CMakeLists.txt  README.md  main.cpp  qml.qrc
qml/: Main.qml  Toolbar.qml
qml/menu/: Back.qml  MenuItem.qml  Power.qml  Services.qml  Settings.qml
qml/menu/services/: Programs.qml
qml/menu/settings/: CPU.qml  RAM.qml  USB.qml
qml/startup/: New.qml
service/: main.js  package.json
src/: ecopen.cpp  power.cpp  power.h  server.cpp  server.h  service.cpp  service.h  settings.cpp  settings.h  startup.cpp  startup.h  virt.cpp  virt.h
src/spice/: spice-view.h  spice-widget.cpp  spice-widget.h  spice.cpp  spice.h
